[tool.poetry]
name = "pyan3-fs"
version = "0.1.0"
description = ""
authors = ["Sugiyama Tsuyoshi <sugiyama@fullmarks.co.jp>"]
readme = "README.md"
packages = [{include = "pyan3_fs"}]

[tool.poetry.dependencies]
python = "^3.11"
pycg = "^0.0.8"
rope = "^1.13.0"
jedi = "^0.19.1"
astroid = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
